--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: welcome
 
 {% include lang.html %}
 
-{% capture my_include %}{% include_relative home.md %}{% endcapture %}
+{% capture my_include %}{% include_relative _tabs/home.md %}{% endcapture %}
 {{ my_include | markdownify }}
 
 <h2>Documentation</h2> 
