--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 ---
+title: Knowledge Base
 layout: welcome
 # Index page
 ---
@@ -8,26 +9,4 @@ layout: welcome
 {% capture my_include %}{% include_relative _tabs/home.md %}{% endcapture %}
 {{ my_include | markdownify }}
 
-<h2>Documentation</h2> 
-
-<ul class="post-content pl-0">
-  {% for sortedcategory in site.sorted-categories %} 
-    {% for category in site.categories %}
-    {% assign category_name = category | first %}
-    {% if sortedcategory != category_name %} 
-        {% continue %} 
-    {% endif %}
-    {% capture _category_url %}/categories/{{ category_name | slugify | url_encode }}/{% endcapture %}
-    <h3><a href="{{ _category_url | relative_url }}">{{ category_name }}</a></h3>
-      <ul class="post-content pl-0" >
-        {% assign items = category.last | sort: 'order' %}
-    {% for post in items %}
-        <li class="d-flex justify-content-between pl-md-3 pr-md-3">
-          <a href="{{ site.baseurl }}/{{ post.url }}">{{ post.title }}</a>
-          <span class="dash flex-grow-1"></span>
-        </li>
-      {% endfor %}
-      </ul>
-  {% endfor %}
-  {% endfor %}
-  </ul>
+{% include home-toc.html %}
